[package]
name = "slack-test"
version = "0.1.0"
authors = ["Seungmin Lee <elenesgu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version="2.0.0", features=["openssl"] }
actix-rt = "1.0.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

openssl = "0.10"

slack = "0.22.0"
slack_api = "0.21.0"

reqwest = { version = "0.10", features = ["json", "blocking"] }