[package]
name = "slack-test"
version = "0.1.0"
authors = ["Seungmin Lee <elenesgu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version="2.0.0", features=["openssl"] }
actix-rt = "1.0.0"
actix = "0.9"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

openssl = "0.10"

reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2.0", features = ["full"] }

ctrlc = "3.0"
hmac = "0.7.1"
sha2 = "0.8.1"

futures = "0.3"
